@@ -1,3 +1,10 @@
+Sat Dec 11 05:00:32 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* regparse.c (FreeNodeList): is a global static variable and shall
+	  be divided into VMs.
+
+	* inits.c (rb_call_inits): ditto.
+
 Sat Dec 11 03:21:50 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
 	* mvm.c (vm_join): Original condition never reached, because a
